--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
     <!-- ===============================================-->
     <!--    Favicons-->
     <!-- ===============================================-->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.ico">
-    <link rel="manifest" href="assets/img/favicons/manifest.json">
-    <meta name="msapplication-TileImage" content="assets/img/favicons/mstile-150x150.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../public/assets/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../public/assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../public/assets/img/favicons/favicon-16x16.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../public/assets/img/favicons/favicon.ico">
+    <link rel="manifest" href="../public/assets/img/favicons/manifest.json">
+    <meta name="msapplication-TileImage" content="../public/assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
 
 
     <!-- ===============================================-->
     <!--    Stylesheets-->
     <!-- ===============================================-->
-    <link href="vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="vendors/hamburgers/hamburgers.min.css" rel="stylesheet">
-    <link href="vendors/loaders.css/loaders.min.css" rel="stylesheet">
-    <link href="assets/css/theme.css" rel="stylesheet" />
-    <link href="assets/css/user.css" rel="stylesheet" />
+    <link href="../public/vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="../public/vendors/hamburgers/hamburgers.min.css" rel="stylesheet">
+    <link href="../public/vendors/loaders.css/loaders.min.css" rel="stylesheet">
+    <link href="../public/assets/css/theme.css" rel="stylesheet" />
+    <link href="../public/assets/css/user.css" rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -45,7 +45,7 @@
       <div class="container px-0">
         <nav class="navbar navbar-expand-lg navbar-freya navbar-light"> <a class="navbar-brand" href="index.html">
             <!-- <div class="freya-logo">Freya</div> -->
-            <img src="../public/assets/img/Empowered wealth service (4).png" style="width: 80px;">
+            <img src="../public/../public/assets/img/Empowered wealth service (4).png" style="width: 80px;">
           </a>
           <button class="navbar-toggler p-0 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#primaryNavbarCollapse" aria-controls="primaryNavbarCollapse" aria-expanded="false" aria-label="Toggle navigation"><span class="hamburger hamburger--emphatic"><span class="hamburger-box"><span class="hamburger-inner"></span></span></span></button>
           <div class="collapse navbar-collapse" id="primaryNavbarCollapse">
@@ -254,7 +254,7 @@
             <div class="col-lg-6">
               <div class="row align-items-center">
                 <div class="col-md-6 col-lg-12">
-                  <img class="img-fluid" src="../public/assets/img/Empowered wealth service (5).png" alt="Hospitality" />
+                  <img class="img-fluid" src="../public/../public/assets/img/Empowered wealth service (5).png" alt="Hospitality" />
                 </div>
               </div>
             </div>
@@ -309,8 +309,8 @@
           </div>
           <div class="row">
             <div class="col-lg-12 mb-4"><img class="w-100" src="https://cdn.neamb.com/-/media/images/neamb/products/nea-auto-home-insurance-program-travelers/nea_auto_home_insurance_program_1477609432_624x426.jpg?h=426&iar=0&w=624&hash=DF08118B097588D6E920DE143781851E" style="border-radius: 30px;" alt="gallery image"></div>
-            <!-- <div class="col-lg-6 mb-4"><img class="w-100" src="assets/img/img_5.jpg" alt="gallery image"></div> -->
-            <!-- <div class="col-12 mb-4"><img class="w-100" src="assets/img/img_6.jpg" alt="gallery image"></div> -->
+            <!-- <div class="col-lg-6 mb-4"><img class="w-100" src="../public/assets/img/img_5.jpg" alt="gallery image"></div> -->
+            <!-- <div class="col-12 mb-4"><img class="w-100" src="../public/assets/img/img_6.jpg" alt="gallery image"></div> -->
           </div>
         </div>
         <!-- end of .container-->
@@ -359,9 +359,9 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-12 mb-4"><img class="w-100" src="assets/img/img_7.jpg" alt="gallery image"></div>
-             <div class="col-lg-6 mb-4"><img class="w-100" src="assets/img/img_8.jpg" alt="gallery image"></div> 
-           <div class="col-lg-6 mb-4"><img class="w-100" src="assets/img/img_9.jpg" alt="gallery image"></div> 
+            <div class="col-12 mb-4"><img class="w-100" src="../public/assets/img/img_7.jpg" alt="gallery image"></div>
+             <div class="col-lg-6 mb-4"><img class="w-100" src="../public/assets/img/img_8.jpg" alt="gallery image"></div> 
+           <div class="col-lg-6 mb-4"><img class="w-100" src="../public/assets/img/img_9.jpg" alt="gallery image"></div> 
           </div>
         </div>
         end of .container
@@ -377,7 +377,7 @@
       <!-- <section> begin ============================-->
       <!-- <section class="py-10 overflow-hidden text-center" data-zanim-timeline="{}" data-zanim-trigger="scroll">
 
-        <div class="bg-holder overlay overlay-1" style="background-image:url(assets/img/banner_3.jpg);" data-parallax="data-parallax" data-rellax-percentage="0.5">
+        <div class="bg-holder overlay overlay-1" style="background-image:url(../public/assets/img/banner_3.jpg);" data-parallax="data-parallax" data-rellax-percentage="0.5">
         </div>
 
         <div class="container">
@@ -408,10 +408,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-6 mb-4"><img class="w-100" src="assets/img/img_10.jpg" alt="gallery image"></div>
-            <div class="col-lg-6 mb-4"><img class="w-100" src="assets/img/img_11.jpg" alt="gallery image"></div>
-            <div class="col-lg-6 mb-4"><img class="w-100" src="assets/img/img_13.jpg" alt="gallery image"></div>
-            <div class="col-lg-6 mb-4"><img class="w-100" src="assets/img/img_12.jpg" alt="gallery image"></div>
+            <div class="col-lg-6 mb-4"><img class="w-100" src="../public/assets/img/img_10.jpg" alt="gallery image"></div>
+            <div class="col-lg-6 mb-4"><img class="w-100" src="../public/assets/img/img_11.jpg" alt="gallery image"></div>
+            <div class="col-lg-6 mb-4"><img class="w-100" src="../public/assets/img/img_13.jpg" alt="gallery image"></div>
+            <div class="col-lg-6 mb-4"><img class="w-100" src="../public/assets/img/img_12.jpg" alt="gallery image"></div>
           </div>
         </div>
 
@@ -426,7 +426,7 @@
       <!-- <section> begin ============================-->
       <!-- <section class="py-10 overflow-hidden text-center" data-zanim-timeline="{}" data-zanim-trigger="scroll">
 
-        <div class="bg-holder overlay overlay-1" style="background-image:url(assets/img/banner_4.jpg);" data-parallax="data-parallax" data-rellax-percentage="0.5">
+        <div class="bg-holder overlay overlay-1" style="background-image:url(../public/assets/img/banner_4.jpg);" data-parallax="data-parallax" data-rellax-percentage="0.5">
         </div>
         <div class="container">
           <div class="overflow-hidden">
@@ -454,10 +454,10 @@
               <div class="swiper" data-swiper='{"loop":true,"autoplay":{"delay":3000},"speed":800}'>
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img class="w-100" src="../public/assets/img/8.png" alt="gallery image">
+                    <img class="w-100" src="../public/../public/assets/img/8.png" alt="gallery image">
                   </div>
                   <div class="swiper-slide">
-                    <img class="w-100" src="../public/assets/img/7.png" alt="gallery image">
+                    <img class="w-100" src="../public/../public/assets/img/7.png" alt="gallery image">
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -469,7 +469,7 @@
             <div class="col-lg-6">
               <div class="row align-items-center">
                 <div class="col-md-6 col-lg-12 text-md-start text-lg-center">
-                  <h5 class="ls text-uppercase mt-4 mb-3">Term Life Insurance with EWS</h5>
+                  <h5 class="ls text-uppercase mt-4 mb-3">Financial & Life Insurance with EWS</h5>
                   <p class="text-justify">Term life insurance provides coverage for a specific period of time, or "term" of years. If the insured person dies within the "term" of the policy and the policy is still in force (active), then the death benefit is paid out to the beneficiary.</p>
 
                   <p class="text-justify">This type of insurance typically allows clients to initially purchase more insurance coverage for less money (premium) than other kinds of life insurance. EWS's "Buy Term and Invest the Difference" philosophy encourages clients to take this "difference" in premium and invest it for the future.</p>
@@ -557,18 +557,18 @@
     <!-- ===============================================-->
     <!--    JavaScripts-->
     <!-- ===============================================-->
-    <script src="vendors/popper/popper.min.js"></script>
-    <script src="vendors/bootstrap/bootstrap.min.js"></script>
-    <script src="vendors/is/is.min.js"></script>
-    <script src="vendors/bigpicture/BigPicture.js"> </script>
-    <script src="vendors/swiper/swiper-bundle.min.js"></script>
-    <script src="vendors/fontawesome/all.min.js"></script>
-    <script src="vendors/rellax/rellax.min.js"></script>
-    <script src="vendors/lodash/lodash.min.js"></script>
-    <script src="vendors/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="vendors/gsap/gsap.js"></script>
-    <script src="vendors/gsap/customEase.js"></script>
-    <script src="assets/js/theme.js"></script>
+    <script src="../public/vendors/popper/popper.min.js"></script>
+    <script src="../public/vendors/bootstrap/bootstrap.min.js"></script>
+    <script src="../public/vendors/is/is.min.js"></script>
+    <script src="../public/vendors/bigpicture/BigPicture.js"> </script>
+    <script src="../public/vendors/swiper/swiper-bundle.min.js"></script>
+    <script src="../public/vendors/fontawesome/all.min.js"></script>
+    <script src="../public/vendors/rellax/rellax.min.js"></script>
+    <script src="../public/vendors/lodash/lodash.min.js"></script>
+    <script src="../public/vendors/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="../public/vendors/gsap/gsap.js"></script>
+    <script src="../public/vendors/gsap/customEase.js"></script>
+    <script src="../public/assets/js/theme.js"></script>
 
   </body>
 
