--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="container px-0">
         <nav class="navbar navbar-expand-lg navbar-freya navbar-light"> <a class="navbar-brand" href="index.html">
             <!-- <div class="freya-logo">Freya</div> -->
-            <img src="../public/../public/assets/img/Empowered wealth service (4).png" style="width: 80px;">
+            <img src="/public/assets/img/Empowered wealth service (4).png" style="width: 80px;">
           </a>
           <button class="navbar-toggler p-0 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#primaryNavbarCollapse" aria-controls="primaryNavbarCollapse" aria-expanded="false" aria-label="Toggle navigation"><span class="hamburger hamburger--emphatic"><span class="hamburger-box"><span class="hamburger-inner"></span></span></span></button>
           <div class="collapse navbar-collapse" id="primaryNavbarCollapse">
@@ -229,6 +229,7 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-10">
+              <img src="/public/assets/img/Empowered wealth service (4).png" style="width: 200px;">
               <p>Empowered Wealth Services</p>
               <h3 class="mb-4">WE HELP FAMILIES GET ON THE PATH TO A SECURE FINANCIAL FUTURE</h3>
             </div>
@@ -461,8 +462,8 @@
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
-                <div class="swiper-button-prev text-white"></div>
-                <div class="swiper-button-next text-white"></div>
+                <!-- <div class="swiper-button-prev text-white"></div> -->
+                <!-- <div class="swiper-button-next text-white"></div> -->
               </div>
             <!-- </div> -->
           </div>  
@@ -516,11 +517,11 @@
 
     <!-- ============================================-->
     <!-- <section> begin ============================-->
-    <section class=" py-4 fs-1 text-center" style="background-color: #011834;">
+    <section class=" py-4 fs-1 text-center" style="background-color: #eea121;">
 
       <div class="container" >
         <div class="overflow-hidden">
-          <h1 class=" fs-sm-3 text-white mb-3" data-zanim-xs='{"delay":0}'>Empowered Wealth Services</h1>
+          <h3 class="text-white mb-3" data-zanim-xs='{"delay":0}'>Empowered Wealth Services</h3>
         </div>
         <div class="overflow-hidden">
           <h5 class="ls fw-light text-lowercase text-white mb-2" data-zanim-xs='{"delay":0.1}'>Everything You Need Right Here!</h5>
@@ -546,13 +547,43 @@
     <!-- ============================================-->
 
 
-    <footer class="bg-primary text-center py-6">
-      <div class="container">
-        <p class="text-uppercase text-300 ls mb-3">Freya Incorporated, 019 Appellation Ave, New Jersey, 535-118-7056</p>
-        <p class="text-700 mb-0">Template by <a class="text-600" href="https://themewagon.com" target="_blank">Themewagon</a></p>
+    <footer class="text-center py-6" style="background-color: #011834;">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h5 class="text-white mb-3">Contact Us</h5>
+        <p class="text-white mb-1">Empowered Wealth Services</p>
+        <p class="text-white mb-1">019 Appellation Ave</p>
+        <p class="text-white mb-1">New Jersey</p>
+        <p class="text-white mb-3">535-118-7056</p>
       </div>
-    </footer>
-
+      <div class="col-md-4">
+        <h5 class="text-white mb-3">Quick Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-white">Home</a></li>
+          <li><a href="#" class="text-white">About Us</a></li>
+          <li><a href="#" class="text-white">Services</a></li>
+          <li><a href="#" class="text-white">Contact</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h5 class="text-white mb-3">Follow Us</h5>
+        <div class="d-flex justify-content-center">
+          <a href="#" class="text-white mx-2"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="text-white mx-2"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="text-white mx-2"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="row mt-4">
+      <div class="col-12">
+        <hr class="bg-white">
+        <p class="text-white mb-0">© 2024 Empowered Wealth Services. All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
 
     <!-- ===============================================-->
     <!--    JavaScripts-->
