--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <!-- ===============================================-->
     <!--    Favicons-->
     <!-- ===============================================-->
-    <link rel="apple-touch-icon" sizes="180x180" href="../public/assets/img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../public/assets/img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../public/assets/img/favicons/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/x-icon" href="../public/assets/img/favicons/favicon.ico">
-    <link rel="manifest" href="../public/assets/img/favicons/manifest.json">
-    <meta name="msapplication-TileImage" content="../public/assets/img/favicons/mstile-150x150.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="..//public/assets/img/Empowered wealth service (4).png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../public/assets/img/Empowered wealth service (4).png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../public/assets/img/Empowered wealth service (4).png">
+    <link rel="shortcut icon" type="image/x-icon" href="../public/assets/img/Empowered wealth service (4).png">
+    <link rel="manifest" href="../public/assets/img/Empowered wealth service (4).png">
+    <meta name="msapplication-TileImage" content="../public/assets/img/Empowered wealth service (4).png../public/assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
 
 
@@ -44,70 +44,41 @@
     <div class="fixed-top">
       <div class="container px-0">
         <nav class="navbar navbar-expand-lg navbar-freya navbar-light"> <a class="navbar-brand" href="index.html">
-            <!-- <div class="freya-logo">Freya</div> -->
             <img src="/public/assets/img/Empowered wealth service (4).png" style="width: 80px;">
           </a>
           <button class="navbar-toggler p-0 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#primaryNavbarCollapse" aria-controls="primaryNavbarCollapse" aria-expanded="false" aria-label="Toggle navigation"><span class="hamburger hamburger--emphatic"><span class="hamburger-box"><span class="hamburger-inner"></span></span></span></button>
-          <div class="collapse navbar-collapse" id="primaryNavbarCollapse">
+          <div class="collapse navbar-collapse " id="primaryNavbarCollapse"   >
             <ul class="navbar-nav py-3 py-lg-0 mt-1 mb-2 my-lg-0 ms-lg-n1">
               <li class="nav-item ">
-                <a class="nav-link " href="JavaScript:void(0)" role="button" data-bs-toggle="dropdown" aria-expanded="false">Home</a>
-                <!-- <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="index.html">Slider Header</a></li>
-                  <li><a class="dropdown-item" href="homes/header-slider-classic.html">Slider Classic</a></li>
-                  <li><a class="dropdown-item" href="homes/header-static.html">Static Header</a></li>
-                  <li><a class="dropdown-item" href="homes/header-static-classic.html">Static Classic</a></li>
-                  <li><a class="dropdown-item" href="homes/header-youtube-video.html">Youtube Background</a></li>
-                  <li><a class="dropdown-item" href="homes/header-youtube-video-classic.html">Youtube Classic</a></li>
-                  <li><a class="dropdown-item" href="homes/header-selfhosted-video.html">Self-hosted Video</a></li>
-                  <li><a class="dropdown-item" href="homes/header-selfhosted-video-classic.html">Self-hosted Classic</a></li>
-                </ul> -->
+                <a class="nav-link " href="index.html" role="button">Home</a>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle dropdown-indicator" href="JavaScript:void(0)" role="button" data-bs-toggle="dropdown" aria-expanded="false">Company</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="pages/about.html">About</a></li>
-                  <li><a class="dropdown-item" href="pages/recognition.html">Recognition</a></li>
-                  <li><a class="dropdown-item" href="pages/blank.html">Blank Page</a></li>
-                  <li><a class="dropdown-item" href="pages/404.html">404 Page</a></li>
-                  <li class="dropend"><a class="dropdown-item dropdown-toggle dropdown-indicator" href="JavaScript:void(0)" data-bs-toggle="dropdown" aria-expanded="false">Account</a>
-                    <ul class="dropdown-menu">
-                      <li> <a class="dropdown-item" href="pages/login.html">Login</a></li>
-                      <li> <a class="dropdown-item" href="pages/registration.html">Registration</a></li>
-                    </ul>
-                  </li>
+                  <li><a class="dropdown-item" href="about.html">About Our CEO</a></li>
+                  <li><a class="dropdown-item" href="recognition.html">Who We Are</a></li>
                 </ul>
               </li>
-              <li class="nav-item dropdown"><a class="nav-link dropdown-toggle dropdown-indicator" href="JavaScript:void(0)" role="button" data-bs-toggle="dropdown" aria-expanded="false">Solutions</a>
+              <li class="nav-item dropdown"><a class="nav-link dropdown-toggle dropdown-indicator" href="JavaScript:void(0)" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="projects/projects.html">Projects Gallery</a></li>
-                  <li><a class="dropdown-item" href="projects/project.html">Single Project</a></li>
+                  <li><a class="nav-link scroll-link dropdown-item" href="fna.html">Financial Need Analysis</a></li>
+                  <li><a class="nav-link scroll-link dropdown-item" href="investment.html">Investment</a></li>
+                  <li><a class="nav-link scroll-link dropdown-item" href="termlife.html">Term Life</a></li>
+                  <li><a class="nav-link scroll-link dropdown-item" href="mortgage.html">Mortgage</a></li>
+                  <li><a class="nav-link scroll-link dropdown-item" href="debtsolutions.html">Debt Solutions</a></li>
+                  <li><a class="nav-link scroll-link dropdown-item" href="auto&home.html">Auto & Home</a></li>
+                  <li><a class="nav-link scroll-link dropdown-item" href="Identitytheft.html">Identity Theft</a></li>
+                  <li><a class="nav-link scroll-link dropdown-item" href="legalsolution.html">Legal Services</a></li>
                 </ul>
               </li>
-              <li class="nav-item dropdown"><a class="nav-link dropdown-toggle dropdown-indicator" href="JavaScript:void(0)" role="button" data-bs-toggle="dropdown" aria-expanded="false">Our Community</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="blog/blog-list.html">Blog List</a></li>
-                  <li><a class="dropdown-item" href="blog/blog.html">Single Blog</a></li>
-                </ul>
+             
+              <li class="nav-item">
+                <a class="nav-link" href="career.html" >Careers</a>
               </li>
-              <li class="nav-item dropdown"><a class="nav-link dropdown-toggle dropdown-indicator" href="JavaScript:void(0)" role="button" data-bs-toggle="dropdown" aria-expanded="false">Careers</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="contact/contact1.html">Contact 1</a></li>
-                  <li><a class="dropdown-item" href="contact/contact2.html">Contact 2</a></li>
-                </ul>
+
+              <li class="nav-item ">
+                <a class="nav-link dropdown-indicator" href="contact1.html" >Contact</a>
               </li>
-              <!-- <li class="nav-item dropdown"><a class="nav-link dropdown-toggle dropdown-indicator" href="JavaScript:void(0)" role="button" data-bs-toggle="dropdown" aria-expanded="false">Elements</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="elements/buttons.html">Buttons</a></li>
-                  <li><a class="dropdown-item" href="elements/colors.html">Colors</a></li>
-                  <li><a class="dropdown-item" href="elements/googlemap.html">Google Map</a></li>
-                  <li><a class="dropdown-item" href="elements/grid.html">Grid</a></li>
-                  <li><a class="dropdown-item" href="elements/icons.html">Icons</a></li>
-                  <li><a class="dropdown-item" href="elements/layouthelpers.html">Layout Helpers</a></li>
-                  <li><a class="dropdown-item" href="elements/modal-video.html">Modal Video</a></li>
-                  <li><a class="dropdown-item" href="elements/swiper.html">Swiper</a></li>
-                  <li><a class="dropdown-item" href="elements/typography.html">Typography</a></li>
-                </ul>
-              </li>-->
+             
             </ul> 
             <ul class="navbar-nav ms-lg-auto flex-row justify-content-center py-3 py-lg-0 me-n2">
               <li><a class="nav-link px-2" href="#"><span class="fab fa-facebook-f" data-fa-transform="shrink-2"></span></a></li>
@@ -518,7 +489,6 @@
     <!-- ============================================-->
     <!-- <section> begin ============================-->
     <section class=" py-4 fs-1 text-center" style="background-color: #eea121;">
-
       <div class="container">
         <div class="overflow-hidden">
           <h3 class="text-white mb-3" data-zanim-xs='{"delay":0}'>Empowered Wealth Services</h3>
@@ -550,23 +520,31 @@
     <footer class="text-center py-6" style="background-color: #011834;">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
-        <h5 class="text-white mb-3">Contact Us</h5>
+      <div class="col-md-3 text-left">
+        <h5 class="text-white mb-3 ">Contact Us</h5>
         <p class="text-white mb-1">Empowered Wealth Services</p>
-        <p class="text-white mb-1">019 Appellation Ave</p>
-        <p class="text-white mb-1">New Jersey</p>
-        <p class="text-white mb-3">535-118-7056</p>
+        <!-- <p class="text-white mb-1">019 Appellation Ave</p> -->
+        <p class="text-white mb-3">‪+1 (443) 838‑1222‬</p>
       </div>
-      <div class="col-md-4">
-        <h5 class="text-white mb-3">Quick Links</h5>
+      <div class="col-md-3">
+        <h5 class="text-white mb-3">Solutions</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-white">Home</a></li>
-          <li><a href="#" class="text-white">About Us</a></li>
-          <li><a href="#" class="text-white">Services</a></li>
-          <li><a href="#" class="text-white">Contact</a></li>
+          <li><a class="nav-link scroll-link dropdown-item text-white" href="fna.html">Financial Need Analysis</a></li>
+          <li><a class="nav-link scroll-link dropdown-item text-white" href="investment.html">Investment</a></li>
+          <li><a class="nav-link scroll-link dropdown-item text-white" href="termlife.html">Term Life</a></li>
+          <li><a class="nav-link scroll-link dropdown-item text-white" href="mortgage.html">Mortgage</a></li>
         </ul>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
+        <h5 class="text-white mb-3">Solutions</h5>
+        <ul class="list-unstyled">
+          <li><a class="nav-link scroll-link dropdown-item text-white" href="debtsolutions.html">Debt Solutions</a></li>
+          <li><a class="nav-link scroll-link dropdown-item text-white" href="auto&home.html">Auto & Home</a></li>
+          <li><a class="nav-link scroll-link dropdown-item text-white" href="Identitytheft.html">Identity Theft</a></li>
+          <li><a class="nav-link scroll-link dropdown-item text-white" href="legalsolution.html">Legal Services</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
         <h5 class="text-white mb-3">Follow Us</h5>
         <div class="d-flex justify-content-center">
           <a href="#" class="text-white mx-2"><i class="fab fa-facebook-f"></i></a>
