--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
     <!-- ===============================================-->
     <!--    Favicons-->
     <!-- ===============================================-->
-    <link rel="apple-touch-icon" sizes="180x180" href="..//public/assets/img/Empowered wealth service (4).png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../public/assets/img/Empowered wealth service (4).png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../public/assets/img/Empowered wealth service (4).png">
-    <link rel="shortcut icon" type="image/x-icon" href="../public/assets/img/Empowered wealth service (4).png">
-    <link rel="manifest" href="../public/assets/img/Empowered wealth service (4).png">
-    <meta name="msapplication-TileImage" content="../public/assets/img/Empowered wealth service (4).png../public/assets/img/favicons/mstile-150x150.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./public/assets/img/Empowered wealth service (4).png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/assets/img/Empowered wealth service (4).png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/assets/img/Empowered wealth service (4).png">
+    <link rel="shortcut icon" type="image/x-icon" href="./public/assets/img/Empowered wealth service (4).png">
+    <link rel="manifest" href="./public/assets/img/Empowered wealth service (4).png">
+    <meta name="msapplication-TileImage" content="./public/assets/img/Empowered wealth service (4).png./public/assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
 
 
     <!-- ===============================================-->
     <!--    Stylesheets-->
     <!-- ===============================================-->
-    <link href="../public/vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="../public/vendors/hamburgers/hamburgers.min.css" rel="stylesheet">
-    <link href="../public/vendors/loaders.css/loaders.min.css" rel="stylesheet">
-    <link href="../public/assets/css/theme.css" rel="stylesheet" />
-    <link href="../public/assets/css/user.css" rel="stylesheet" />
+    <link href="./public/vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="./public/vendors/hamburgers/hamburgers.min.css" rel="stylesheet">
+    <link href="./public/vendors/loaders.css/loaders.min.css" rel="stylesheet">
+    <link href="./public/assets/css/theme.css" rel="stylesheet" />
+    <link href="./public/assets/css/user.css" rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -226,7 +226,7 @@
             <div class="col-lg-6">
               <div class="row align-items-center">
                 <div class="col-md-6 col-lg-12">
-                  <img class="img-fluid" src="../public/../public/assets/img/Empowered wealth service (5).png" alt="Hospitality" />
+                  <img class="img-fluid" src="./public/./public/assets/img/Empowered wealth service (5).png" alt="Hospitality" />
                 </div>
               </div>
             </div>
@@ -281,8 +281,8 @@
           </div>
           <div class="row">
             <div class="col-lg-12 mb-4"><img class="w-100" src="https://cdn.neamb.com/-/media/images/neamb/products/nea-auto-home-insurance-program-travelers/nea_auto_home_insurance_program_1477609432_624x426.jpg?h=426&iar=0&w=624&hash=DF08118B097588D6E920DE143781851E" style="border-radius: 30px;" alt="gallery image"></div>
-            <!-- <div class="col-lg-6 mb-4"><img class="w-100" src="../public/assets/img/img_5.jpg" alt="gallery image"></div> -->
-            <!-- <div class="col-12 mb-4"><img class="w-100" src="../public/assets/img/img_6.jpg" alt="gallery image"></div> -->
+            <!-- <div class="col-lg-6 mb-4"><img class="w-100" src="./public/assets/img/img_5.jpg" alt="gallery image"></div> -->
+            <!-- <div class="col-12 mb-4"><img class="w-100" src="./public/assets/img/img_6.jpg" alt="gallery image"></div> -->
           </div>
         </div>
         <!-- end of .container-->
@@ -331,9 +331,9 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-12 mb-4"><img class="w-100" src="../public/assets/img/img_7.jpg" alt="gallery image"></div>
-             <div class="col-lg-6 mb-4"><img class="w-100" src="../public/assets/img/img_8.jpg" alt="gallery image"></div> 
-           <div class="col-lg-6 mb-4"><img class="w-100" src="../public/assets/img/img_9.jpg" alt="gallery image"></div> 
+            <div class="col-12 mb-4"><img class="w-100" src="./public/assets/img/img_7.jpg" alt="gallery image"></div>
+             <div class="col-lg-6 mb-4"><img class="w-100" src="./public/assets/img/img_8.jpg" alt="gallery image"></div> 
+           <div class="col-lg-6 mb-4"><img class="w-100" src="./public/assets/img/img_9.jpg" alt="gallery image"></div> 
           </div>
         </div>
         end of .container
@@ -349,7 +349,7 @@
       <!-- <section> begin ============================-->
       <!-- <section class="py-10 overflow-hidden text-center" data-zanim-timeline="{}" data-zanim-trigger="scroll">
 
-        <div class="bg-holder overlay overlay-1" style="background-image:url(../public/assets/img/banner_3.jpg);" data-parallax="data-parallax" data-rellax-percentage="0.5">
+        <div class="bg-holder overlay overlay-1" style="background-image:url(./public/assets/img/banner_3.jpg);" data-parallax="data-parallax" data-rellax-percentage="0.5">
         </div>
 
         <div class="container">
@@ -380,10 +380,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-6 mb-4"><img class="w-100" src="../public/assets/img/img_10.jpg" alt="gallery image"></div>
-            <div class="col-lg-6 mb-4"><img class="w-100" src="../public/assets/img/img_11.jpg" alt="gallery image"></div>
-            <div class="col-lg-6 mb-4"><img class="w-100" src="../public/assets/img/img_13.jpg" alt="gallery image"></div>
-            <div class="col-lg-6 mb-4"><img class="w-100" src="../public/assets/img/img_12.jpg" alt="gallery image"></div>
+            <div class="col-lg-6 mb-4"><img class="w-100" src="./public/assets/img/img_10.jpg" alt="gallery image"></div>
+            <div class="col-lg-6 mb-4"><img class="w-100" src="./public/assets/img/img_11.jpg" alt="gallery image"></div>
+            <div class="col-lg-6 mb-4"><img class="w-100" src="./public/assets/img/img_13.jpg" alt="gallery image"></div>
+            <div class="col-lg-6 mb-4"><img class="w-100" src="./public/assets/img/img_12.jpg" alt="gallery image"></div>
           </div>
         </div>
 
@@ -398,7 +398,7 @@
       <!-- <section> begin ============================-->
       <!-- <section class="py-10 overflow-hidden text-center" data-zanim-timeline="{}" data-zanim-trigger="scroll">
 
-        <div class="bg-holder overlay overlay-1" style="background-image:url(../public/assets/img/banner_4.jpg);" data-parallax="data-parallax" data-rellax-percentage="0.5">
+        <div class="bg-holder overlay overlay-1" style="background-image:url(./public/assets/img/banner_4.jpg);" data-parallax="data-parallax" data-rellax-percentage="0.5">
         </div>
         <div class="container">
           <div class="overflow-hidden">
@@ -426,10 +426,10 @@
               <div class="swiper" data-swiper='{"loop":true,"autoplay":{"delay":3000},"speed":800}'>
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img class="w-100" src="../public/../public/assets/img/8.png" alt="gallery image">
+                    <img class="w-100" src="./public/./public/assets/img/8.png" alt="gallery image">
                   </div>
                   <div class="swiper-slide">
-                    <img class="w-100" src="../public/../public/assets/img/7.png" alt="gallery image">
+                    <img class="w-100" src="./public/./public/assets/img/7.png" alt="gallery image">
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -566,18 +566,18 @@
     <!-- ===============================================-->
     <!--    JavaScripts-->
     <!-- ===============================================-->
-    <script src="../public/vendors/popper/popper.min.js"></script>
-    <script src="../public/vendors/bootstrap/bootstrap.min.js"></script>
-    <script src="../public/vendors/is/is.min.js"></script>
-    <script src="../public/vendors/bigpicture/BigPicture.js"> </script>
-    <script src="../public/vendors/swiper/swiper-bundle.min.js"></script>
-    <script src="../public/vendors/fontawesome/all.min.js"></script>
-    <script src="../public/vendors/rellax/rellax.min.js"></script>
-    <script src="../public/vendors/lodash/lodash.min.js"></script>
-    <script src="../public/vendors/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="../public/vendors/gsap/gsap.js"></script>
-    <script src="../public/vendors/gsap/customEase.js"></script>
-    <script src="../public/assets/js/theme.js"></script>
+    <script src="./public/vendors/popper/popper.min.js"></script>
+    <script src="./public/vendors/bootstrap/bootstrap.min.js"></script>
+    <script src="./public/vendors/is/is.min.js"></script>
+    <script src="./public/vendors/bigpicture/BigPicture.js"> </script>
+    <script src="./public/vendors/swiper/swiper-bundle.min.js"></script>
+    <script src="./public/vendors/fontawesome/all.min.js"></script>
+    <script src="./public/vendors/rellax/rellax.min.js"></script>
+    <script src="./public/vendors/lodash/lodash.min.js"></script>
+    <script src="./public/vendors/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="./public/vendors/gsap/gsap.js"></script>
+    <script src="./public/vendors/gsap/customEase.js"></script>
+    <script src="./public/assets/js/theme.js"></script>
 
   </body>
 
