--- a/career.html
+++ b/career.html
@@ -17,22 +17,22 @@
     <!--    Favicons-->
     <!-- ===============================================-->
     <link rel="apple-touch-icon" sizes="180x180" href="..//public/assets/img/Empowered wealth service (4).png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../public/assets/img/Empowered wealth service (4).png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../public/assets/img/Empowered wealth service (4).png">
-    <link rel="shortcut icon" type="image/x-icon" href="../public/assets/img/Empowered wealth service (4).png">
-    <link rel="manifest" href="../public/assets/img/Empowered wealth service (4).png">
-    <meta name="msapplication-TileImage" content="../public/assets/img/Empowered wealth service (4).png../public/assets/img/favicons/mstile-150x150.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/assets/img/Empowered wealth service (4).png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/assets/img/Empowered wealth service (4).png">
+    <link rel="shortcut icon" type="image/x-icon" href="./public/assets/img/Empowered wealth service (4).png">
+    <link rel="manifest" href="./public/assets/img/Empowered wealth service (4).png">
+    <meta name="msapplication-TileImage" content="./public/assets/img/Empowered wealth service (4).png./public/assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
 
 
     <!-- ===============================================-->
     <!--    Stylesheets-->
     <!-- ===============================================-->
-    <link href="../public/vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="../public/vendors/hamburgers/hamburgers.min.css" rel="stylesheet">
-    <link href="../public/vendors/loaders.css/loaders.min.css" rel="stylesheet">
-    <link href="../public/assets/css/theme.css" rel="stylesheet" />
-    <link href="../public/assets/css/user.css" rel="stylesheet" />
+    <link href="./public/vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="./public/vendors/hamburgers/hamburgers.min.css" rel="stylesheet">
+    <link href="./public/vendors/loaders.css/loaders.min.css" rel="stylesheet">
+    <link href="./public/assets/css/theme.css" rel="stylesheet" />
+    <link href="./public/assets/css/user.css" rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -139,28 +139,28 @@
 
               <div class="row justify-content-center mt-6">
                 <div class="col-6 col-md-4 col-lg-3 mb-4">
-                  <div class="client-logo"><img src="../public/assets/img/logo/ad.png" alt="brand logo" width="120" /></div>
+                  <div class="client-logo"><img src="./public/assets/img/logo/ad.png" alt="brand logo" width="120" /></div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3 mb-4">
-                  <div class="client-logo"><img src="../public/assets/img/logo/american_express.gif" alt="brand logo" width="180" /></div>
+                  <div class="client-logo"><img src="./public/assets/img/logo/american_express.gif" alt="brand logo" width="180" /></div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3 mb-4">
-                  <div class="client-logo"><img src="../public/assets/img/logo/departures.png" alt="brand logo" width="160" /></div>
+                  <div class="client-logo"><img src="./public/assets/img/logo/departures.png" alt="brand logo" width="160" /></div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3 mb-4">
-                  <div class="client-logo"><img src="../public/assets/img/logo/goldlist.jpg" alt="brand logo" width="120" /></div>
+                  <div class="client-logo"><img src="./public/assets/img/logo/goldlist.jpg" alt="brand logo" width="120" /></div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3 mb-4">
-                  <div class="client-logo"><img src="../public/assets/img/logo/interiordesign.png" alt="brand logo" width="150" /></div>
+                  <div class="client-logo"><img src="./public/assets/img/logo/interiordesign.png" alt="brand logo" width="150" /></div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3 mb-4">
-                  <div class="client-logo"><img src="../public/assets/img/logo/luxe.jpg" alt="brand logo" width="150" /></div>
+                  <div class="client-logo"><img src="./public/assets/img/logo/luxe.jpg" alt="brand logo" width="150" /></div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3 mb-4">
-                  <div class="client-logo"><img src="../public/assets/img/logo/robb_report.jpg" alt="brand logo" width="170" /></div>
+                  <div class="client-logo"><img src="./public/assets/img/logo/robb_report.jpg" alt="brand logo" width="170" /></div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3 mb-4">
-                  <div class="client-logo"><img src="../public/assets/img/logo/wsj.jpg" alt="brand logo" width="100" /></div>
+                  <div class="client-logo"><img src="./public/assets/img/logo/wsj.jpg" alt="brand logo" width="100" /></div>
                 </div>
               </div>
             </div>
@@ -262,18 +262,18 @@
       <!-- ===============================================-->
       <!--    JavaScripts-->
       <!-- ===============================================-->
-      <script src="../public/vendors/popper/popper.min.js"></script>
-      <script src="../public/vendors/bootstrap/bootstrap.min.js"></script>
-      <script src="../public/vendors/is/is.min.js"></script>
-      <script src="../public/vendors/bigpicture/BigPicture.js"> </script>
-      <script src="../public/vendors/swiper/swiper-bundle.min.js"></script>
-      <script src="../public/vendors/fontawesome/all.min.js"></script>
-      <script src="../public/vendors/rellax/rellax.min.js"></script>
-      <script src="../public/vendors/lodash/lodash.min.js"></script>
-      <script src="../public/vendors/imagesloaded/imagesloaded.pkgd.min.js"></script>
-      <script src="../public/vendors/gsap/gsap.js"></script>
-      <script src="../public/vendors/gsap/customEase.js"></script>
-      <script src="../public/assets/js/theme.js"></script>
+      <script src="./public/vendors/popper/popper.min.js"></script>
+      <script src="./public/vendors/bootstrap/bootstrap.min.js"></script>
+      <script src="./public/vendors/is/is.min.js"></script>
+      <script src="./public/vendors/bigpicture/BigPicture.js"> </script>
+      <script src="./public/vendors/swiper/swiper-bundle.min.js"></script>
+      <script src="./public/vendors/fontawesome/all.min.js"></script>
+      <script src="./public/vendors/rellax/rellax.min.js"></script>
+      <script src="./public/vendors/lodash/lodash.min.js"></script>
+      <script src="./public/vendors/imagesloaded/imagesloaded.pkgd.min.js"></script>
+      <script src="./public/vendors/gsap/gsap.js"></script>
+      <script src="./public/vendors/gsap/customEase.js"></script>
+      <script src="./public/assets/js/theme.js"></script>
   
     </body>
   
