--- a/about.html
+++ b/about.html
@@ -16,23 +16,23 @@
     <!-- ===============================================-->
     <!--    Favicons-->
     <!-- ===============================================-->
-    <link rel="apple-touch-icon" sizes="180x180" href="../public/assets/img/Empowered wealth service (4).png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../public/assets/img/Empowered wealth service (4).png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../public/assets/img/Empowered wealth service (4).png">
-    <link rel="shortcut icon" type="image/x-icon" href="../public/assets/img/Empowered wealth service (4).png">
-    <link rel="manifest" href="../public/assets/img/Empowered wealth service (4).png">
-    <meta name="msapplication-TileImage" content="../public/assets/img/Empowered wealth service (4).png../public/assets/img/favicons/mstile-150x150.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./public/assets/img/Empowered wealth service (4).png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/assets/img/Empowered wealth service (4).png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/assets/img/Empowered wealth service (4).png">
+    <link rel="shortcut icon" type="image/x-icon" href="./public/assets/img/Empowered wealth service (4).png">
+    <link rel="manifest" href="./public/assets/img/Empowered wealth service (4).png">
+    <meta name="msapplication-TileImage" content="./public/assets/img/Empowered wealth service (4).png./public/assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
 
 
     <!-- ===============================================-->
     <!--    Stylesheets-->
     <!-- ===============================================-->
-    <link href="../public/vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="../public/vendors/hamburgers/hamburgers.min.css" rel="stylesheet">
-    <link href="../public/vendors/loaders.css/loaders.min.css" rel="stylesheet">
-    <link href="../public/assets/css/theme.css" rel="stylesheet" />
-    <link href="../public/assets/css/user.css" rel="stylesheet" />
+    <link href="./public/vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="./public/vendors/hamburgers/hamburgers.min.css" rel="stylesheet">
+    <link href="./public/vendors/loaders.css/loaders.min.css" rel="stylesheet">
+    <link href="./public/assets/css/theme.css" rel="stylesheet" />
+    <link href="./public/assets/css/user.css" rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -188,15 +188,15 @@
           <div class="row justify-content-center mt-6">
             <div class="col-lg-11">
               <div class="row">
-                <div class="col-lg-4 mb-5 mb-lg-0"><img class="img-fluid" src="../public/assets/img/portrait-1.jpg" alt="Shane Cotter" />
+                <div class="col-lg-4 mb-5 mb-lg-0"><img class="img-fluid" src="./public/assets/img/portrait-1.jpg" alt="Shane Cotter" />
                   <h5 class="text-black mt-4 mb-1">Shane Cotter</h5>
                   <p class="mb-0">Associate, IT</p>
                 </div>
-                <div class="col-lg-4 mb-5 mb-lg-0"><img class="img-fluid" src="../public/assets/img/portrait-2.jpg" alt="Kathryn Wilson" />
+                <div class="col-lg-4 mb-5 mb-lg-0"><img class="img-fluid" src="./public/assets/img/portrait-2.jpg" alt="Kathryn Wilson" />
                   <h5 class="text-black mt-4 mb-1">Kathryn Wilson</h5>
                   <p class="mb-0">Associate, Development</p>
                 </div>
-                <div class="col-lg-4"><img class="img-fluid" src="../public/assets/img/portrait-3.jpg" alt="Thomas Anders" />
+                <div class="col-lg-4"><img class="img-fluid" src="./public/assets/img/portrait-3.jpg" alt="Thomas Anders" />
                   <h5 class="text-black mt-4 mb-1">Thomas Anders</h5>
                   <p class="mb-0">Associate, Architecture</p>
                 </div>
@@ -234,7 +234,7 @@
               </div>
             </div>
             <div class="col-lg-6 mt-4">
-              <img src="../public/assets/img/Empowered wealth service (5).png" style="width: 100%;">
+              <img src="./public/assets/img/Empowered wealth service (5).png" style="width: 100%;">
             </div>
           </div>
         </div>
@@ -250,7 +250,7 @@
       <!-- <section> begin ============================-->
       <!-- <section class="py-10 overflow-hidden text-center" data-zanim-timeline="{}" data-zanim-trigger="scroll">
 
-        <div class="bg-holder overlay overlay-1" style="background-image:url(../public/assets/img/about_careers.jpg);" data-parallax="data-parallax" data-rellax-percentage="0.5">
+        <div class="bg-holder overlay overlay-1" style="background-image:url(./public/assets/img/about_careers.jpg);" data-parallax="data-parallax" data-rellax-percentage="0.5">
         </div>
 
         <div class="container">
@@ -497,18 +497,18 @@
       <!-- ===============================================-->
       <!--    JavaScripts-->
       <!-- ===============================================-->
-      <script src="../public/vendors/popper/popper.min.js"></script>
-      <script src="../public/vendors/bootstrap/bootstrap.min.js"></script>
-      <script src="../public/vendors/is/is.min.js"></script>
-      <script src="../public/vendors/bigpicture/BigPicture.js"> </script>
-      <script src="../public/vendors/swiper/swiper-bundle.min.js"></script>
-      <script src="../public/vendors/fontawesome/all.min.js"></script>
-      <script src="../public/vendors/rellax/rellax.min.js"></script>
-      <script src="../public/vendors/lodash/lodash.min.js"></script>
-      <script src="../public/vendors/imagesloaded/imagesloaded.pkgd.min.js"></script>
-      <script src="../public/vendors/gsap/gsap.js"></script>
-      <script src="../public/vendors/gsap/customEase.js"></script>
-      <script src="../public/assets/js/theme.js"></script>
+      <script src="./public/vendors/popper/popper.min.js"></script>
+      <script src="./public/vendors/bootstrap/bootstrap.min.js"></script>
+      <script src="./public/vendors/is/is.min.js"></script>
+      <script src="./public/vendors/bigpicture/BigPicture.js"> </script>
+      <script src="./public/vendors/swiper/swiper-bundle.min.js"></script>
+      <script src="./public/vendors/fontawesome/all.min.js"></script>
+      <script src="./public/vendors/rellax/rellax.min.js"></script>
+      <script src="./public/vendors/lodash/lodash.min.js"></script>
+      <script src="./public/vendors/imagesloaded/imagesloaded.pkgd.min.js"></script>
+      <script src="./public/vendors/gsap/gsap.js"></script>
+      <script src="./public/vendors/gsap/customEase.js"></script>
+      <script src="./public/assets/js/theme.js"></script>
   
     </body>
   
