--- a/contact1.html
+++ b/contact1.html
@@ -129,59 +129,50 @@
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
-      <section>
-
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4 pe-lg-6" style="border: 1px solid #011834;  ">
-              <div class="row">
-                <div class="col-md-4 col-lg-12 mb-4">
-                  <h5 class="mb-2">Manitoba Office</h5>121 King's Street,<br />Manitoba 1230, Canada<br />Cell: <a href="tel:+47535383458">+475 3538 3458</a>
-                </div>
-                <div class="col-md-4 col-lg-12 mb-4">
-                  <h5 class="mb-2">Brooklyn Office</h5>62 Collins Street West,<br />Brooklyn 3030, USA<br />Cell: <a href="tel:+47523433421">+475 2343 3421</a>
-                </div>
-                <div class="col-md-4 col-lg-12">
-                  <h4 class="mb-2">Socials</h4>
-                  <a class="mt-2" href="#!">
-                    <span class="fab fa-linkedin fs-2 me-2 text-primary" data-fa-transform="shrink-1"></span></a>
-                    <a class="mt-2" href="#!">
-                      <span class="fab fa-instagram-square fs-2 mx-2 text-primary" data-fa-transform="shrink-1"></span></a>
-                      <a class="mt-2" href="#!"><span class="fab fa-facebook-square fs-2 mx-2 text-primary" data-fa-transform="shrink-1"></span></a>
+     
+      <!-- ============================================-->
+      <!-- <section> begin ============================-->
+        <section class="bg-100">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-10">
+                <p class="dropcap">EWS recognizes the pressing need for their friends, family and community members to have access to financial education and the right financial solutions that could help them live better lives and prepare for the future. Their middle–income market was – and still is – largely underserved by the financial services industry in favor of higher income clients. Freedom for Families was the goal because basic financial principles, which empower people to ask the right questions or make better decisions still aren’t often taught in schools.
+                </p>
+              <button class="btn btn-primary" type="Submit"> <span class="text-white fw-semi-bold">Join Our Team</span></button>
+  
+                <div class="row justify-content-center mt-6">
+                  <div class="col-6 col-md-4 col-lg-3 mb-4">
+                    <div class="client-logo"><img src="./public/assets/img/logo/ad.png" alt="brand logo" width="120" /></div>
+                  </div>
+                  <div class="col-6 col-md-4 col-lg-3 mb-4">
+                    <div class="client-logo"><img src="./public/assets/img/logo/american_express.gif" alt="brand logo" width="180" /></div>
+                  </div>
+                  <div class="col-6 col-md-4 col-lg-3 mb-4">
+                    <div class="client-logo"><img src="./public/assets/img/logo/departures.png" alt="brand logo" width="160" /></div>
+                  </div>
+                  <div class="col-6 col-md-4 col-lg-3 mb-4">
+                    <div class="client-logo"><img src="./public/assets/img/logo/goldlist.jpg" alt="brand logo" width="120" /></div>
+                  </div>
+                  <div class="col-6 col-md-4 col-lg-3 mb-4">
+                    <div class="client-logo"><img src="./public/assets/img/logo/interiordesign.png" alt="brand logo" width="150" /></div>
+                  </div>
+                  <div class="col-6 col-md-4 col-lg-3 mb-4">
+                    <div class="client-logo"><img src="./public/assets/img/logo/luxe.jpg" alt="brand logo" width="150" /></div>
+                  </div>
+                  <div class="col-6 col-md-4 col-lg-3 mb-4">
+                    <div class="client-logo"><img src="./public/assets/img/logo/robb_report.jpg" alt="brand logo" width="170" /></div>
+                  </div>
+                  <div class="col-6 col-md-4 col-lg-3 mb-4">
+                    <div class="client-logo"><img src="./public/assets/img/logo/wsj.jpg" alt="brand logo" width="100" /></div>
+                  </div>
                 </div>
               </div>
             </div>
-            <!-- <div class="col-lg mt-4 mt-lg-0">
-              <form>
-                <div class="row">
-                  <div class="col-12">
-                    <input class="form-control" type="text" placeholder="Your Name" required="required" />
-                  </div>
-                  <div class="col-12 mt-4">
-                    <input class="form-control" type="email" placeholder="Email" required="required" />
-                  </div>
-                  <div class="col-12 mt-4">
-                    <textarea class="form-control" rows="6" placeholder="Enter your descriptions here..." required="required"></textarea>
-                  </div>
-                  <div class="col-12 mt-4">
-                    <button class="btn btn-primary" type="Submit"> <span class="text-white fw-semi-bold">Send Now</span></button>
-                  </div>
-                </div>
-              </form>
-            </div> -->
-            <!-- <div class="col-12 mt-8">
-              <div class="googlemap" data-latlng="48.8583701,2.2922873,17" data-scrollwheel="false" data-icon="../assets/img/map-marker.png" data-zoom="13" data-theme="Default" style="min-height: 350px;">
-                <div class="marker-content py-3">
-                  <h5>Eiffel Tower</h5>
-                  <p>Gustave Eiffel's iconic, wrought-iron 1889 tower,<br /> with steps and elevators to observation decks.</p>
-                </div>
-              </div>
-            </div> -->
           </div>
-        </div>
-        <!-- end of .container-->
-
-      </section>
+  
+          <!-- end of .container-->
+  
+        </section>
       <!-- <section> close ============================-->
       <!-- ============================================-->
 
